# Yellow_belt

./: CMakeLists.txt  README.md
Week1/Task1/: README.md  Task1.cpp  Task1.h  Task1_tests.cpp
Week1/Task2/: Task2.cpp  Task2.h  main.cpp
Week1/Task3/: Task3.cpp  Task3.h  main.cpp
Week1/Task4/: Task4.cpp  Task4.h  main.cpp
Week1/Task5/: Task5.cpp  Task5.h  main.cpp
Week1/Task6/: Task6.h  main.cpp
cmake/: HunterGate.cmake
